[gd_scene load_steps=3 format=3 uid="uid://be8etl58pgwpg"]

[ext_resource type="Theme" uid="uid://kap5kmb140ee" path="res://resources/theme.tres" id="1_fuwhu"]
[ext_resource type="Script" path="res://scenes/tile.gd" id="1_ud7oo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ud7oo")

[node name="TileButton" type="Button" parent="."]
custom_minimum_size = Vector2(22, 22)
layout_mode = 0
offset_right = 22.0
offset_bottom = 22.0
theme = ExtResource("1_fuwhu")

[node name="SymbolLabel" type="Label" parent="TileButton"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 0
offset_right = 22.0
offset_bottom = 23.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[connection signal="mouse_entered" from="TileButton" to="." method="_on_tile_button_mouse_entered"]
[connection signal="mouse_exited" from="TileButton" to="." method="_on_tile_button_mouse_exited"]
[connection signal="pressed" from="TileButton" to="." method="_on_tile_button_pressed"]
